Añadido html y css de pronóstico

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pronóstico Semanal</a>
+                            <a class="nav-link" href="pronostico.html">Pronóstico Semanal</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
@@ -147,7 +147,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -188,7 +188,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -229,7 +229,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -282,7 +282,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -325,7 +325,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -368,7 +368,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -421,7 +421,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -464,7 +464,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -507,7 +507,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -560,7 +560,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -603,7 +603,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -646,7 +646,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="text-center"><a href="#!" class="btn btn-outline-dark">Pronóstico</a></div>
+                                                    <div class="text-center"><a href="pronostico.html" class="btn btn-outline-dark">Pronóstico</a></div>
                                                 </div>
                                             </div>
                                         </div>
